2008-01-14  Bruno Haible  <bruno@clisp.org>

	* spvw_sigterm.d (quit_on_signal): After raising the signal, return
	from the function.

2008-01-14  Bruno Haible  <bruno@clisp.org>

	* Makefile.devel: Use CONFIGURES instead of CLISP_CONFIGURES. Fixes
	problem introduced on 2008-01-05.

2008-01-14  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1871205 ]: how to quit upon SIGTERM, SIGKILL, or SIGQUIT
	* spvw_sigterm.d (quit_on_signal_in_progress): new static boolean
	(uninstall_sigterm_handler): undo the effects of install_sigterm_handler
	(quit_on_signal): call uninstall_sigterm_handler first thing so
	that the repeated signals bypass the handler and kill CLISP instantly

2008-01-13  Bruno Haible  <bruno@clisp.org>

	Make it work on OpenBSD 4.0 x86 with address space randomization.
	* lispbibl.d (ADDRESS_RANGE_RANDOMIZED): New macro.
	(LINUX_NOEXEC_HEAPCODES/STANDARD_HEAPCODES, TRIVIALMAP_MEMORY): Depend
	on it.

2008-01-13  Bruno Haible  <bruno@clisp.org>

	* spvw_memfile.d (loadmem_from_handle) [SPVW_MIXED_BLOCKS_OPPOSITE]:
	Fix the test whether there's enough room.

2008-01-13  Bruno Haible  <bruno@clisp.org>

	* makemake.in: Don't use $(MAKE) -C.

2008-01-13  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACK_start): declare new per_thread
	* spvw.d (STACK_start): create and ...
	(init_memory): init to the initial value of STACK
	* spvw_debug.d (nobject_out1): use STACK_start to print
	framepointers and framepointerp to check for them
	* io.d (pr_framepointer_1): new function: print frame offset from
	STACK_start instead of its address
	(pr_framepointer): use it instead of pr_hex6

2008-01-13  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (per_thread): per-thread storage class
	* spvw.d, lispbibl.d (STACK, callback_saved_registers)
	(saved_mv_count, saved_value1, saved_back_trace, saved_STACK)
	(SP_bound, STACK_bound, mv_count, mv_space, temp_mv_count)
	(temp_value1, back_trace, aktenv, unwind_protect_to_save)